data/t9garj68.txt
$ make
cc -o switcher_danfysik -Wall -g switcher_danfysik.c -I.
switcher_danfysik.c: In function ‘xs_wprintf’:
switcher_danfysik.c:1501:6: warning: type of ‘va_alist’ defaults to ‘int’ [-Wimplicit-int]
 1501 | void xs_wprintf(va_alist)
      |      ^~~~~~~~~~
In file included from switcher_danfysik.c:36:
switcher_danfysik.c:1513:2: error: ‘va_start’ used in function with fixed args
 1513 |  va_start(args, sizeof(args));
      |  ^~~~~~~~
make: *** [Makefile:4: switcher_danfysik] Error 1